crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__postfix_expr-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: unexpected token
[34m>[0m code:2
[34m|[0m 
[34m|[0m [31;4m.[0md
[34m|[0m 


