crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__postfix_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
GetField(
    GetField {
        target: GetIndex(
            GetIndex {
                target: GetField(
                    GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                ),
                key: GetVar(
                    GetVar {
                        name: "c",
                    },
                ),
            },
        ),
        name: "d",
    },
)
