crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__print_stmt.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Print(
            Print {
                values: [
                    Literal(
                        String(
                            "a",
                        ),
                    ),
                    Literal(
                        Int(
                            0,
                        ),
                    ),
                    Literal(
                        Bool(
                            true,
                        ),
                    ),
                ],
            },
        ),
        Print(
            Print {
                values: [
                    Literal(
                        String(
                            "a",
                        ),
                    ),
                    Literal(
                        Int(
                            0,
                        ),
                    ),
                    Literal(
                        Bool(
                            true,
                        ),
                    ),
                ],
            },
        ),
    ],
}
