crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__unary_expr-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Opt,
        right: Call(
            Call {
                target: GetField(
                    GetField {
                        target: GetIndex(
                            GetIndex {
                                target: GetField(
                                    GetField {
                                        target: GetVar(
                                            GetVar {
                                                name: "a",
                                            },
                                        ),
                                        name: "b",
                                    },
                                ),
                                key: GetVar(
                                    GetVar {
                                        name: "c",
                                    },
                                ),
                            },
                        ),
                        name: "d",
                    },
                ),
                args: Args {
                    pos: [],
                    kw: [],
                },
            },
        ),
    },
)
