crates/syntax/src/parser/snapshots/hebi_syntax__parser__tests__unary_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Unary(
    Unary {
        op: Plus,
        right: GetVar(
            GetVar {
                name: "a",
            },
        ),
    },
)
